ensure a minimum amount of whitespace on container

--- a/app/assets/stylesheets/application/quizzes/_overview.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_overview.css.sass
@@ -2,6 +2,9 @@
   +font-serif-large
 
 #quiz-overview
+  .container
+    min-height: 610px
+
   p
     +font-serif-huge
     margin-top: 0
